Add tutorials in templatized form.

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,10 @@
           <p>All the code for this website is available on Github and I appreciate pull requests.</p>
 
           <ul>
-            <li><a href='tutorials/kalman_tutorial.html'>Kalman Filter</a></li>
-            <li><a href='tutorials/extended_kalman.html'>Extended Kalman Filter</a></li>
-            <li><a href='tutorials/unscented_kalman.html'>Unscented Kalman Filter</a></li>
-            <li><a href='tutorials/if_tutorial.html'>Information Filter</a></li>
+            <li><a href='tutorial/kalman_filter'>Kalman Filter</a></li>
+            <li><a href='tutorial/extended_kalman'>Extended Kalman Filter</a></li>
+            <li><a href='tutorial/unscented_kalman'>Unscented Kalman Filter</a></li>
+            <li><a href='tutorial/if_filter'>Information Filter</a></li>
           </ul>
         </div>
       </div>
