--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
             <li><a href='tutorial/information_filter'>Information Filter</a></li>
             <li><a href='tutorial/extended_kalman_filter'>Extended Kalman Filter</a></li>
             <li><a href='tutorial/unscented_kalman_filter'>Unscented Kalman Filter</a></li>
+            <li><a href='tutorial/particle_filter'>Particle Filter</a></li>
           </ul>
         </div>
       </div>
